[package]
name = "physics"
version = "0.1.0"
edition = "2021"

[features]
inspector = [
    "bevy-inspector-egui",
    # "bevy-inspector-egui-rapier"
]


default = ["inspector"]
# default = []


[dependencies]
# ] }
bevy = { version = "0.9" }
# bevy = { version = "0.9", features = ["dynamic"] }
wgpu = "*"
bevy-inspector-egui = { version = "0.14", optional = true }

# TODO: bevy 0.9
# bevy-inspector-egui-rapier = { version = "0.7", optional = true, features = [
#     "rapier3d",
# ] }

log = "0.4"
anyhow = { version = "1" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = "0.9"
ron = "0.8"
flexbuffers = "*"
# bevy_rapier3d = { version = "0.18", path = "ext/bevy_rapier/bevy_rapier3d", features = [
#     "debug-render",
# ] }
bevy_rapier3d = { version = "0.19", features = ["debug-render"] }

# rapier3d = { version = "0.16.0" }
# bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d", features = [
#     "debug-render",
# ] }
gltf = "*"
bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
# bevy_fps_controller = "0.1.2-dev"
parry3d = { version = "*", features = ["serde-serialize"] }
# nalgebra = { version = "*", features = ["serde-serialize-no-std"] }
# bevy_ecs_ldtk = "0.4"
# [patch.crates-io]
# bevy_mod_raycast = { path = "bevy_mod_raycast" }

# bevy_atmosphere = "0.4"
bevy_atmosphere = { git = "https://github.com/JonahPlusPlus/bevy_atmosphere.git" }
bitflags = "1"
quick-xml = { version = "0.26", features = ["serialize"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }
image = "0.24"
env_logger = "0.10"
[patch.crates-io]
#bevy_rapier3d = { path = "ext/bevy_rapier/bevy_rapier3d" }
#rapier3d = { path = "ext/rapier/crates/rapier3d" }
# bevy = { path = "ext/bevy" }

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
