[package]
name = "physics"
version = "0.1.0"
edition = "2021"

[features]
inspector = [
    "bevy-inspector-egui",
    "editor/inspector"
    # "bevy-inspector-egui-rapier"
]
external_deps = [
    "bevy_mod_outline",
    "bevy_prototype_debug_lines"
]

default = ["inspector"]
# default = []


[workspace.dependencies]
log = "0.4"
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = "0.9"
ron = "0.8"
flexbuffers = "2"
gltf = "*"
bitflags = "2"
quick-xml = { version = "0.26", features = ["serialize"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }
image = "0.24"
env_logger = "0.10"
dialoguer = "0.10"
console = "0.15"
rayon = "1"
arrayvec = "0.7"
thiserror = "1"

###
# bevy related dependencies
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.25", features = [
    "debug-render",
    "serde-serialize",
] }
bevy-inspector-egui = { version = "0.23" }
bevy_egui = "0.25"
wgpu = "0.19"
parry3d = "0.13"

# frequently cause churn on bevy updates
bevy_atmosphere = { version = "0.9" }
bevy_prototype_debug_lines = { version = "0.11", features = ["3d"] }
bevy_mod_mipmap_generator = { git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator.git" }
bevy_mod_outline = {version = "0.6", optional = false}
bevy_infinite_grid = {version = "0.10.0", optional = false}

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
wgpu = {workspace = true}
bevy-inspector-egui = { workspace = true, optional = true }

log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ron = { workspace = true }

flexbuffers = { workspace = true }
bevy_rapier3d = { workspace = true, features = [
    "debug-render",
    "serde-serialize",
] }

gltf = { workspace = true }
bevy_prototype_debug_lines = { workspace = true, features = ["3d"], optional = true }
bevy_atmosphere = { workspace = true }
bevy_mod_mipmap_generator = { workspace = true }
bitflags = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
zip = { workspace = true, default-features = false, features = ["deflate"] }
clap = { workspace = true, features = ["derive"] }
image = { workspace = true }
env_logger = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
rayon = { workspace = true }
bevy_egui = { workspace = true }
arrayvec = { workspace = true }
bevy_mod_outline = { workspace = true, optional = true }
thiserror = { workspace = true }

csg = { path = "crates/csg" }
sstree = { path = "crates/sstree" }
material = { path = "crates/material" }
shared = { path = "crates/shared" }
editor = { path = "crates/editor" }

[patch.crates-io]
#bevy_rapier3d = { path = "ext/bevy_rapier/bevy_rapier3d" }
#rapier3d = { path = "ext/rapier/crates/rapier3d" }
# bevy = { path = "ext/bevy" }

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "crates/csg",
    "crates/sstree",
    "crates/material",
    "crates/shared",
    "crates/editor",
]
