[package]
name = "csg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# not specifying specific versions of bevy crates so that the actual version is determined by the main project
bevy = { version = "0.9" }                       #, features = ["dynamic"] }
bevy_rapier3d = { version = "0.20" }             #, features = ["debug-render"] }
serde = { version = "1", features = ["derive"] }
bevy-inspector-egui = { version = "0.15" }
bitflags = "1"
