[package]
name = "csg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# not specifying specific versions of bevy crates so that the actual version is determined by the main project
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bevy-inspector-egui = { workspace = true }
bitflags = { workspace = true }
