[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# not specifying specific versions of bevy crates so that the actual version is determined by the main project

bevy = { version = "0" }
wgpu = "*"
bevy-inspector-egui = { version = "0" }

# TODO: bevy 0.9
# bevy-inspector-egui-rapier = { version = "0.7", optional = true, features = [
#     "rapier3d",
# ] }

log = "0.4"
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = "0.9"
ron = "0.8"

# bevy_rapier3d = { version = "0.18", path = "ext/bevy_rapier/bevy_rapier3d", features = [
#     "debug-render",
# ] }
bevy_rapier3d = { version = "0", features = ["debug-render"] }

# rapier3d = { version = "0.16.0" }
# bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d", features = [
#     "debug-render",
# ] }
gltf = "*"
# bevy_fps_controller = "0.1.2-dev"
parry3d = { version = "*", features = ["serde-serialize"] }
# nalgebra = { version = "*", features = ["serde-serialize-no-std"] }
# bevy_ecs_ldtk = "0.4"
# [patch.crates-io]
# bevy_mod_raycast = { path = "bevy_mod_raycast" }

# bevy_atmosphere = "0.4"
bitflags = "1"
quick-xml = { version = "0.26", features = ["serialize"] }
image = "0.24"
rayon = "1"
bevy_egui = "0"
arrayvec = "0.7"
bevy_mod_outline = "0.3"
thiserror = "1"

bevy_infinite_grid = "0.6.0"
csg = { path = "../csg" }
sstree = { path = "../sstree" }
material = { path = "../material" }
shared = { path = "../shared" }

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
