[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
inspector = [
    "bevy-inspector-egui",
]

[dependencies]
# not specifying specific versions of bevy crates so that the actual version is determined by the main project

bevy = { workspace = true }
wgpu = { workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ron = { workspace = true }
sled = { workspace = true }

# bevy_rapier3d = { version = "0.18", path = "ext/bevy_rapier/bevy_rapier3d", features = [
#     "debug-render",
# ] }
bevy_rapier3d = { workspace = true, features = ["debug-render"] }

# rapier3d = { version = "0.16.0" }
# bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d", features = [
#     "debug-render",
# ] }
gltf = { workspace = true }
# bevy_fps_controller = "0.1.2-dev"
parry3d = { workspace = true }
# nalgebra = { version = "*", features = ["serde-serialize-no-std"] }
# bevy_ecs_ldtk = "0.4"
# [patch.crates-io]
# bevy_mod_raycast = { path = "bevy_mod_raycast" }

bitflags = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
image = { workspace = true }
rayon = { workspace = true }
bevy_egui = { workspace = true }
arrayvec = { workspace = true }
thiserror = { workspace = true }


csg = { path = "../csg" }
sstree = { path = "../sstree" }
material = { path = "../material" }
shared = { path = "../shared" }

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
