[package]
name = "material"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# not specifying specific versions of bevy crates so that the actual version is determined by the main project

bevy = { version = "0" }                         #, features = ["dynamic"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
