[package]
name = "sstree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }               #, features = ["dynamic"] }
bevy-inspector-egui = { workspace = true }
arrayvec = { workspace = true }

[dev-dependencies]
draw = "^0.3"
arrayvec = "^0.7"
rand = "^0.8"
getchar = "^0.1"
egui = "^0.20"
eframe = "^0.20"
anyhow = "^1"
thiserror = "^1"
